title alignment correction

--- a/main.css
+++ b/main.css
@@ -3,7 +3,6 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    padding: 2em;
     background-color: #e9faff;
 
 }
@@ -11,9 +10,13 @@ nav {
     width: 95vw;
     text-align: center;
     font-size: 2em;
-    padding: 0.5em;
+    padding: 0;
     margin: 0 auto;
     border: 1px solid grey;
+}
+nav h1 {
+    padding: 0;
+    margin: 0;
 }
 #output-field {
     padding: 2em;
